--- a/Mock_test/chisquare_일원_카이제곱_검정_적합성검정.ipynb
+++ b/Mock_test/chisquare_일원_카이제곱_검정_적합성검정.ipynb
@@ -2,18 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "ceb3d8f3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     item1  item2  item3\n",
-      "Obs    400    200    300\n",
-      "Exp    300    300    300\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item1</th>\n",
+       "      <th>item2</th>\n",
+       "      <th>item3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Obs</th>\n",
+       "      <td>400</td>\n",
+       "      <td>200</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Exp</th>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     item1  item2  item3\n",
+       "Obs    400    200    300\n",
+       "Exp    300    300    300"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -23,44 +67,12 @@
     "freq2 = [300,300,300]\n",
     "table = pd.DataFrame([freq1,freq2], columns = ['item1','item2','item3'],\n",
     "                 index = ['Obs','Exp'])\n",
-    "print(table)"
+    "table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "11655f93",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Power_divergenceResult(statistic=66.66666666666667, pvalue=3.3382377953650016e-15)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = chisquare(freq1, f_exp = freq2)\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "be4f0d93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# p-value가 유의수준 0.05보다 작으므로 실제 분포와 기대 분포는 차이가 있음을 알 수 있다. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "69c9c7ec",
    "metadata": {},
    "outputs": [
@@ -85,8 +97,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "11655f93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Power_divergenceResult(statistic=66.66666666666667, pvalue=3.3382377953650016e-15)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = chisquare(freq1, f_exp = freq2)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "be4f0d93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# p-value가 유의수준 0.05보다 작으므로 실제 분포와 기대 분포는 차이가 있음을 알 수 있다. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "36fcf2a3",
+   "id": "dbc61345",
    "metadata": {},
    "outputs": [],
    "source": []
